# RType

./: .gitignore  CMakeLists.txt  CODE_STATUS.md  DIAGNOSTIC.md  README.md  conanfile.txt  run_tests.sh
documentation/: ADVANCED_NETWORKING.md  BENCHMARK.md  CONTRIBUTING.MD  DEVELOPER_GUIDE.MD  ECS_IMPLEMENTATION.md  ECS_WHY.md  ProtocolRFC.md  ServerArchitecture.md  USER_GUIDE.MD
engine/: CMakeLists.txt
engine/include/engine/audio/: AudioManager.hpp
engine/include/engine/core/: Component.hpp  Registry.hpp  Registry.inl  SparseSet.hpp  SparseSet.inl  System.hpp
engine/include/engine/gameplay/: Background.hpp  Controllable.hpp  Enemy.hpp  EnemyFactory.hpp  EnemyShooter.hpp  Health.hpp  HighscoreManager.hpp  IScoreProvider.hpp  PlayerInputState.hpp  PlayerStats.hpp  Projectile.hpp  Score.hpp  UpgradeDefinitions.hpp  UpgradeSelector.hpp
engine/include/engine/graphics/: Animation.hpp  Renderer.hpp  Sprite.hpp  SpriteSheet.hpp
engine/include/engine/physics/: Transform.hpp  Velocity.hpp
engine/include/engine/systems/: AnimationSystem.hpp  BossHealthBarSystem.hpp  BoundarySystem.hpp  CleanupSystem.hpp  CollisionSystem.hpp  EnemyHealthBarSystem.hpp  EnemyShootingSystem.hpp  EnemySpawnSystem.hpp  HealthRegenSystem.hpp  HighscoreSystem.hpp  InputSystem.hpp  MovementSystem.hpp  PlayerHealthBarSystem.hpp  RenderSystem.hpp  ScoreDisplaySystem.hpp  ScrollingBackgroundSystem.hpp  ServerInputSystem.hpp  ServerShootingSystem.hpp  ShootingSystem.hpp  SoloScoreSystem.hpp
engine/include/engine/utils/: FontManager.hpp
engine/src/audio/: AudioManager.cpp
engine/src/core/: Registry.cpp  System.cpp
engine/src/gameplay/: Controllable.cpp  Enemy.cpp  EnemyFactory.cpp  EnemyShooter.cpp  Health.cpp  HighscoreManager.cpp  PlayerInputState.cpp  Projectile.cpp  Score.cpp  UpgradeSelector.cpp
engine/src/graphics/: Animation.cpp  Renderer.cpp  Sprite.cpp  SpriteSheet.cpp
engine/src/physics/: Transform.cpp  Velocity.cpp
engine/src/systems/: AnimationSystem.cpp  BossHealthBarSystem.cpp  BoundarySystem.cpp  CleanupSystem.cpp  CollisionSystem.cpp  EnemyHealthBarSystem.cpp  EnemyShootingSystem.cpp  EnemySpawnSystem.cpp  HealthRegenSystem.cpp  HighscoreSystem.cpp  InputSystem.cpp  MovementSystem.cpp  PlayerHealthBarSystem.cpp  RenderSystem.cpp  ScoreDisplaySystem.cpp  ScrollingBackgroundSystem.cpp  ServerInputSystem.cpp  ServerShootingSystem.cpp  ShootingSystem.cpp  SoloScoreSystem.cpp
game/: CMakeLists.txt
game/include/: CheatManager.hpp  LocalScoreProvider.hpp  Menu.hpp  NetworkClient.hpp  NetworkScoreProvider.hpp
game/include/config/: GameConstants.hpp  ServerConfig.hpp
game/include/core/: GameLoop.hpp  GameManager.hpp  InputState.hpp  MenuLoop.hpp
game/include/helpers/: GameClientHelpers.hpp
game/include/initialization/: GameInitializer.hpp
game/include/levels/: ILevelRenderer.hpp  Level1Renderer.hpp  Level2Renderer.hpp  LevelAssetManager.hpp
game/include/managers/: EntityTypes.hpp  EventHandler.hpp  NetworkEntityManager.hpp
game/include/protocol/: Protocol.hpp
game/include/ui/: EndlessGameOverScreen.hpp  GameOverScreen.hpp  LevelTransition.hpp  LobbyScreen.hpp  PauseMenu.hpp  UpgradeMenu.hpp
game/src/: CheatManager.cpp  GameClientHelpers.cpp  LocalScoreProvider.cpp  Main.cpp  Menu.cpp  NetworkClient.cpp  NetworkScoreProvider.cpp  VolumeToggleWidget.hpp  main.cpp
game/src/core/: GameLoop.cpp  GameManager.cpp  InputState.cpp  MenuLoop.cpp
game/src/initialization/: GameInitializer.cpp
game/src/levels/: LevelAssetManager.cpp
game/src/managers/: EventHandler.cpp  NetworkEntityManager.cpp
game/src/ui/: EndlessGameOverScreen.cpp  GameOverScreen.cpp  LevelTransition.cpp  LobbyScreen.cpp  PauseMenu.cpp  UpgradeMenu.cpp
server/: CMakeLists.txt
server/include/: Client.hpp  GameModule.hpp  IGameModule.hpp  INetworkModule.hpp  NetworkModule.hpp  Server.hpp  UDPSocket.hpp
server/include/levels/: ILevel.hpp  Level1.hpp  Level2.hpp  LevelManager.hpp
server/include/network/: ISocket.hpp  ReliableUDP.hpp  SocketFactory.hpp  UDPAddress.hpp  UDPSocket.hpp
server/include/protocol/: Protocol.hpp
server/src/: GameModule.cpp  GameModule_Combat.cpp  GameModule_Players.cpp  NetworkModule.cpp  Server.cpp  main.cpp
server/src/levels/: Level1.cpp  Level2.cpp  LevelManager.cpp
tests/: CMakeLists.txt  test_components.cpp  test_game_module.cpp  test_protocol.cpp  test_registry.cpp  test_sparse_set.cpp  test_systems.cpp
